# multi-agent-quant

./: README.md  pyproject.toml
.playwright-cli/: page-2026-04-13T07-15-09-312Z.yml
configs/: system.backtest.yaml  system.csv-replay.example.yaml  system.easyquotation.example.yaml  system.easyquotation.local.yaml  system.example.yaml  system.local.yaml  system.realtime.example.yaml  system.synthetic.yaml  system.tushare.example.yaml  system.tushare.local.yaml  system.tushare.yaml
console/: index.html
docs/: REALTIME-DATA.md  architecture.md  project-blog.md
output/: console-check.js  state-sample.json
output/.playwright-cli/: page-2026-04-08T06-05-29-220Z.yml  (+3 more)
runtime/: ablation_report.json  account_snapshot.json  alerts.json  backtest_data.csv  blotter.jsonl  console_market_feed_smoketest.csv  console_runtime.yaml  dashboard.html  dashboard_summary.json  easyquotation_live_blotter.jsonl  easyquotation_longrun_blotter.jsonl  easyquotation_tradecheck_blotter.jsonl  equity_curve.json  ops_report.md  run_history.jsonl  system.easyquotation.longrun.yaml  system.easyquotation.smoketest.yaml  system.easyquotation.tradecheck.yaml  user_friendly_dashboard.html
scripts/: check_realtime_env.py  control_console.py  probe_market_feed.py  run_realtime.py  run_simulation.py  serve_dashboard.py
tests/: test_agent_strategies.py  test_config.py  test_console_service.py  test_data_feeds.py  test_live_pipeline_bootstrap.py  test_ops_reporting.py  test_portfolio_brain.py  test_reporting_dashboard.py  test_risk_engine.py
webapp/: app.py  requirements.txt
(+517 files in other folders)
